src/render/tests/snapshots/diagnostic_render__render__tests__singleline__separate_lines_1.snap
---
source: src/render/tests/singleline.rs
expression: result
---
error: Mismatched types
 --> test_file.test:1:4
1 | let main = 23;
  |    ^^^^^^^^^^ expected type annotation here
2 | something += 3.0;
  |              --- due to this

